5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1807_2570.log
== TEST (2019-06-13 08:48:09) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("Numeros ")))
			 
m = mean(x)
n = size(x)
p = 0
			 
for i in range(size(x)):
	p = p * (x[i] - m)
		
d = sqrt(d)
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:48:40) 
-- CODE:
from numpy import*
from math import*

x = array(eval(input("Numeros ")))
			 
m = mean(x)
n = size(x)
p = 0
			 
for i in range(size(x)):
	p = p * (x[i] - m)
		
d = sqrt(p)
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 08:49:16) 
-- CODE:
from numpy import*
x = array(
n = size(x)
m = mean(x)
p = 1
for i in range(size(x)):
	ab = abs(x[i] - m)
	p = p * ab
	
k = (p)**(1/n)
print(round(k,3))
-- EXECUTION TIME:
0.695923
-- ERROR:
  File "/home/codebench/codes/1807/2570/main.py", line 4
    m = mean(x)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 08:49:36) 
-- CODE:
from numpy import*

x = array(eval(input("Numeros: "))
n = size(x)
m = mean(x)
p = 1
for i in range(size(x)):
	ab = abs(x[i] - m)
	p = p * ab
	
k = (p)**(1/n)
print(round(k,3))
-- EXECUTION TIME:
0.58186
-- ERROR:
  File "/home/codebench/codes/1807/2570/main.py", line 4
    n = size(x)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 08:49:44) 
-- CODE:
from numpy import*

x = array(eval(input("Numeros: ")))
n = size(x)
m = mean(x)
p = 1
for i in range(size(x)):
	ab = abs(x[i] - m)
	p = p * ab
	
k = (p)**(1/n)
print(round(k,3))
-- EXECUTION TIME:
1.28804
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
